--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
     display: flex;
     flex-direction: column;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Roboto', sans-serif;
 }
 
-.header {
+.header, .header-2 {
     background-color: #1f2937;
     padding: 16px;
     display: flex;
@@ -23,4 +23,20 @@ a {
     text-decoration: none;
     font-weight: bold;
     font-size: larger;
+}
+
+.container-1 {
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    background: #3882f6;
+    color: white;
+    border-radius: 25px;
+    border-color: #3882f6;
+    padding: 16px;
+    width: 8px;
+    height: auto;
 }
