--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
 }
 
-.links {
+.links, .classroom {
     display: flex;
     gap: 20px;
     font-weight: 300;
@@ -34,9 +34,30 @@ a {
 button {
     background: #3882f6;
     color: white;
-    border-radius: 25px;
-    border-color: #3882f6;
+    border-radius: 8px;
+    border: 1px solid #3882f6;
+    padding: 8px 16px;
+}
+
+.header-2 {
+    gap: 16px;
+}
+
+.container-2 {
+    display: flex;
+    justify-content: center;
+    gap: 52px;
+}
+  
+.card {
+    max-width: 200px;
+}
+
+h2 {
+    text-align: center;
     padding: 16px;
-    width: 8px;
-    height: auto;
+}
+
+#tutor {
+    text-align: center;
 }
