--- a/style.css
+++ b/style.css
@@ -61,3 +61,26 @@ h2 {
 #tutor {
     text-align: center;
 }
+
+.quote, .author {
+    display: flex;
+    background-color: #e5e7eb;
+    margin: 0;
+}
+
+.quote {
+    justify-content: center;
+    font-style: italic;
+    font-weight: lighter;
+    font-size: 24px;
+    color: #1f2937;
+    padding: 100px 100px 0px 100px;
+}
+
+.author {
+    justify-content: flex-end;
+    font-size: 18px;
+    font-weight: bold;
+    color: #1f2937;
+    padding: 0px 100px 100px 100px;
+}
