--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ button {
     display: flex;
     justify-content: center;
     gap: 52px;
+    margin-bottom: 50px;
 }
   
 .card {
@@ -55,7 +56,8 @@ button {
 
 h2 {
     text-align: center;
-    padding: 16px;
+    padding: 25px;
+    margin-top: 25px;
 }
 
 #tutor {
