--- a/style.css
+++ b/style.css
@@ -114,3 +114,13 @@ h4 {
 #call {
     margin-top: 0px;
 }
+
+.footer {
+    background-color: #1f2937;
+    color: rgb(196, 196, 196);
+    display: flex;
+    justify-content: center;
+    padding: 24px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
