--- a/style.css
+++ b/style.css
@@ -114,13 +114,17 @@ h4, #call {
 }
 
 h4 {
-    margin-bottom: 0px;
+    margin-bottom: 2px;
     margin-top: 32px;
 }
 
 #call {
     margin-top: 0px;
     font-size: 14px;
+}
+
+.container-3 button {
+    font-weight: bold;
 }
 
 .footer {
