--- a/style.css
+++ b/style.css
@@ -44,12 +44,18 @@ button {
 }
 
 .header-2 {
-    gap: 16px;
+    gap: 24px;
     padding: 0px 80px 50px 80px;
 }
 
 h1 {
     margin: 0;
+}
+
+.container-1 button {
+    flex-grow: 0;
+    max-width: fit-content;
+    font-weight: bold;
 }
 
 .container-2 {
